--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 header {
   grid-area: header;
-  background-color: #203040;
+  background-color: #31d62b;
 }
 main {
   grid-area: main;
@@ -35,7 +35,7 @@ main {
 }
 footer {
   grid-area: footer;
-  background-color: #203040;
+  background-color: #31d62b;
   color: #ffffff;
 }
 /* Common */
